[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/main/ui/ScenarioButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/main/ui/scenario-menu.gd" type="Script" id=2]
[ext_resource path="res://assets/puzzle/wood-backdrop.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/xolonium-36-outline.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/ui/xolonium-16.tres" type="DynamicFont" id=5]
[ext_resource path="res://src/main/ui/sprint-button.gd" type="Script" id=6]
[ext_resource path="res://src/main/ui/ultra-button.gd" type="Script" id=7]
[ext_resource path="res://src/main/ui/marathon-button.gd" type="Script" id=8]

[node name="ScenarioMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
scale = Vector2( 0.492308, 0.469484 )
texture = ExtResource( 3 )
centered = false

[node name="Version" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -110.0
margin_top = -30.0
margin_right = -9.99988
custom_fonts/font = ExtResource( 5 )
text = "v1.2.3.4"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 20.0
margin_right = -50.0
margin_bottom = -20.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprint Label" type="Label" parent="VBoxContainer"]
margin_right = 924.0
margin_bottom = 71.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "Sprint"
align = 1
valign = 2

[node name="Sprint" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 81.0
margin_right = 924.0
margin_bottom = 152.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50

[node name="SpacerL" type="Control" parent="VBoxContainer/Sprint"]
margin_right = 193.0
margin_bottom = 71.0
size_flags_horizontal = 3

[node name="Normal" parent="VBoxContainer/Sprint" instance=ExtResource( 1 )]
margin_left = 243.0
margin_right = 436.0
script = ExtResource( 6 )
scenario_name = "sprint-normal"

[node name="Expert" parent="VBoxContainer/Sprint" instance=ExtResource( 1 )]
margin_left = 486.0
margin_right = 679.0
script = ExtResource( 6 )
scenario_name = "sprint-expert"

[node name="SpacerR" type="Control" parent="VBoxContainer/Sprint"]
margin_left = 729.0
margin_right = 924.0
margin_bottom = 71.0
size_flags_horizontal = 3

[node name="Ultra Label" type="Label" parent="VBoxContainer"]
margin_top = 162.0
margin_right = 924.0
margin_bottom = 233.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "Ultra"
align = 1
valign = 2

[node name="Ultra" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 243.0
margin_right = 924.0
margin_bottom = 314.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50

[node name="SpacerL" type="Control" parent="VBoxContainer/Ultra"]
margin_right = 80.0
margin_bottom = 71.0
rect_min_size = Vector2( 80, 0 )

[node name="Normal" parent="VBoxContainer/Ultra" instance=ExtResource( 1 )]
margin_left = 130.0
margin_right = 318.0
script = ExtResource( 7 )
scenario_name = "ultra-normal"

[node name="Hard" parent="VBoxContainer/Ultra" instance=ExtResource( 1 )]
margin_left = 368.0
margin_right = 556.0
script = ExtResource( 7 )
scenario_name = "ultra-hard"

[node name="Expert" parent="VBoxContainer/Ultra" instance=ExtResource( 1 )]
margin_left = 606.0
margin_right = 794.0
script = ExtResource( 7 )
scenario_name = "ultra-expert"

[node name="SpacerR" type="Control" parent="VBoxContainer/Ultra"]
margin_left = 844.0
margin_right = 924.0
margin_bottom = 71.0
rect_min_size = Vector2( 80, 0 )

[node name="Marathon Label" type="Label" parent="VBoxContainer"]
margin_top = 324.0
margin_right = 924.0
margin_bottom = 395.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "Marathon"
align = 1
valign = 2

[node name="Marathon" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 405.0
margin_right = 924.0
margin_bottom = 476.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50

[node name="Normal" parent="VBoxContainer/Marathon" instance=ExtResource( 1 )]
script = ExtResource( 8 )
scenario_name = "marathon-normal"

[node name="Hard" parent="VBoxContainer/Marathon" instance=ExtResource( 1 )]
margin_left = 243.0
margin_right = 436.0
script = ExtResource( 8 )
scenario_name = "marathon-hard"

[node name="Expert" parent="VBoxContainer/Marathon" instance=ExtResource( 1 )]
margin_left = 486.0
margin_right = 679.0
script = ExtResource( 8 )
scenario_name = "marathon-expert"

[node name="Master" parent="VBoxContainer/Marathon" instance=ExtResource( 1 )]
margin_left = 729.0
margin_right = 924.0
script = ExtResource( 8 )
scenario_name = "marathon-master"

[node name="Spacer" type="Control" parent="VBoxContainer"]
margin_top = 486.0
margin_right = 924.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
[connection signal="pressed" from="VBoxContainer/Sprint/Normal" to="." method="_on_SprintNormal_pressed"]
[connection signal="pressed" from="VBoxContainer/Sprint/Expert" to="." method="_on_SprintExpert_pressed"]
[connection signal="pressed" from="VBoxContainer/Ultra/Normal" to="." method="_on_UltraNormal_pressed"]
[connection signal="pressed" from="VBoxContainer/Ultra/Hard" to="." method="_on_UltraHard_pressed"]
[connection signal="pressed" from="VBoxContainer/Ultra/Expert" to="." method="_on_UltraExpert_pressed"]
[connection signal="pressed" from="VBoxContainer/Marathon/Normal" to="." method="_on_MarathonNormal_pressed"]
[connection signal="pressed" from="VBoxContainer/Marathon/Hard" to="." method="_on_MarathonHard_pressed"]
[connection signal="pressed" from="VBoxContainer/Marathon/Expert" to="." method="_on_MarathonExpert_pressed"]
[connection signal="pressed" from="VBoxContainer/Marathon/Master" to="." method="_on_MarathonMaster_pressed"]
